                                                         -*- coding: utf-8 -*-

Changes with Apache Traffic Server 3.0.1
  *) [TS-868] build fails with --as-needed. Author: Ilya Barygin.

  *) [TS-860] Built in error for host not found looks like Internet Explorer
    error. Author: William Bardwell 

  *) [TS-875]: TSFetchRestpGet(), TSFetchPageResptGet() and TSFetchUrl() have
    incorrect asserts. Author: Manjesh Nilange 

  *) [TS-834] InactivityCop::check_inactivity crash

  *) [TS-826] TSHttpTxnErrorBodySet() can leak memory.
    Author: William Bardwell 

  *) [TS-833] Continuation::handleEvent deadbeef fix. This fixes most of the
    dns related crashes

  *) [TS-828]: Various memory leaks and uninitialized values.
    Author: William Bardwell 

  *) [TS-839] Build problems when specifying lmza location.

  *) [TS-840] Regression checks fail (again) due to faulty assert use.
   Author: Arno Toell.

  *) [TS-847] Bad timeout when using CONNECT method.


Changes with Apache Traffic Server 3.0.0
  *) [TS-827] TSMimeHdrFieldValueStringInsert() can use freed memory to
  edit headers. Author: William Bardwell.

  *) [TS-825] negative caching caches responses that should never be
   cached: Author: William Bardwell.

  *) [TS-820] Restore log buffer size to previous defaults.

  *) [TS-818] Assertion/abort when starting TS with SOCKS proxy enabled.
   Author: Yakov Markovitch

  *) [TS-810] Typo in switch statement + slight improvement.

  *) [TS-809] ts.h broken when compiling C plugins.

  *) [TS-798] We add broken remap rules when we encounter parse errors of
   remap.config.


Changes with Apache Traffic Server 2.1.9
  *) [TS-805] HostDB wastes a lot of storage for round-robin entries,
   and the calculations of size are off.

  *) [TS-806] TS_ADDTO removes duplicates, so avoid this by using the
   -R option to libtool

  *) [TS-793] Improve print statements for ink_freelist debugging.

  *) [TS-679] The external API was changed to make it IPv6 compliant