@@ -39,10 +39,7 @@ A list of all bugs open for the next v3.0.1 release can be found at
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
 
-  * build: remove uninstall target from build system
-    Trunk patch: http://svn.apache.org/viewvc?rev=1136958&view=rev
-    Jira: https://issues.apache.org/jira/browse/TS-842
-    +1: igalic, zwoop, amc
+
 
 RELEASE PROCESS
 
